2006-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/cap-dialog.glade:
	  New file.

	* data/ui/menubar.xml:
	  Removed a separator.

	* lib/gaupol/gtk/cons.py:
	* lib/gaupol/gtk/util/conf.py:
	* lib/gaupol/gtk/delegate/guiinit.py:
	  Implemented toolbar style customization.

	* lib/gaupol/gtk/delegate/find.py:
	* lib/gaupol/gtk/dialog/find.py:
	* lib/gaupol/gtk/dialog/test/test_find.py:
	  Moved notifications to statusbar.
	  Added notification of wrapping.

	* lib/gaupol/gtk/delegate/help.py:
	  (VersionInfoDialog): Fixed version number parsing (for now).

2006-08-15  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.desktop.in:
	* lib/gaupol/base/cons.py:
	* lib/gaupol/base/delegate/__init__.py:
	* lib/gaupol/base/delegate/action.py:
	* lib/gaupol/base/delegate/edit.py:
	* lib/gaupol/base/delegate/filesave.py:
	* lib/gaupol/base/delegate/find.py:
	* lib/gaupol/base/delegate/format.py:
	* lib/gaupol/base/delegate/position.py:
	* lib/gaupol/base/delegate/set.py:
	* lib/gaupol/base/delegate/support.py:
	* lib/gaupol/base/delegate/test/test_action.py:
	* lib/gaupol/base/delegate/test/test_edit.py:
	* lib/gaupol/base/delegate/test/test_filesave.py:
	* lib/gaupol/base/delegate/test/test_find.py:
	* lib/gaupol/base/delegate/test/test_format.py:
	* lib/gaupol/base/delegate/test/test_set.py:
	* lib/gaupol/base/delegate/test/test_support.py:
	* lib/gaupol/base/delegate/test/test_text.py:
	* lib/gaupol/base/delegate/text.py:
	* lib/gaupol/base/file/mpsub.py:
	* lib/gaupol/base/file/test/test_determiner.py:
	* lib/gaupol/base/file/test/test_init.py:
	* lib/gaupol/base/model.py:
	* lib/gaupol/base/tags/converter.py:
	* lib/gaupol/base/tags/test/test_converter.py:
	* lib/gaupol/base/tags/test/test_init.py:
	* lib/gaupol/base/test/test_model.py:
	* lib/gaupol/base/test/test_project.py:
	* lib/gaupol/base/text/finder.py:
	* lib/gaupol/base/text/test/test_finder.py:
	* lib/gaupol/base/text/test/test_parser.py:
	* lib/gaupol/base/util/langlib.py: